--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
 </head>
 <body>
     <p>Hello World!</p>
-    <p>Lorem ipsum dolor</p>    
+    <p>Lorem ipsum dolor</p>
+    <form action="">
+        
+        <input type="text" name="labels" id="001">
+        <input type="button" value="Batton">
+        <button>Кнопка</button>
+        <input type="checkbox">
+        <input type="date">
+        <input type="time">
+        <input type="file">
+        <input type="radio">
+        <input type="range">
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <select name="" id="">
+            <option value="1">выбор 1</option>
+            <option value="2">выбор 2</option>
+            <option value="3">выбор 3</option>
+        </select>
+        
+    </form>    
 </body>
 </html>
