--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <select name="" id="">
             <option value="1">выбор 1</option>
             <option value="2">выбор 2</option>
+            <span>uid=null</span>
+            <span>uid=0</span>
         </select>
         
     </form>    
