--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input type="text" name="labels" id="001">
         <input type="button" value="Batton">
         <button>Кнопка</button>
+        <button>exit</button>
         <input type="checkbox">
         <input type="date">
         <input type="time">
